kubernetes/networking/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-network-policy
  namespace: default
spec:
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            open_to_the_world: allow
      ports:
      -  protocol: TCP
         port: 80
         endPort: 9999
